[package]
name = "rust-hsluv"
description = "Color converstions. Convert to/from various color representations: hex, rgb, hsluv, hpluv, lch and xyz."
repository = "https://github.com/dvdplm/rust-hsluv"
readme = "README.md"
keywords = ["hsluv", "hpluv", "color", "conversion"]
categories = ["encoding", "rendering", "multimedia::images"]
license = "MIT"
version = "0.1.4"
authors = ["David Palm <dvdplm@gmail.com>"]
edition = "2018"

[lib]
name = "hsluv"

[dependencies.fixed]
version = "*"
features = ["az"]

[dependencies.heapless]
version = "*"
features = ["ufmt-impl"]

[dependencies.num-traits]
version = "*"
default-features = false
features = ["libm"]

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
