[package]
name = "hsluv-tiny"
description = "Color converstions. Convert to/from various color representations: hex, rgb, hsluv, hpluv, lch and xyz."
repository = "https://github.com/tene/hsluv-tiny"
readme = "README.md"
keywords = ["hsluv", "hpluv", "color", "conversion", "no_std"]
categories = ["encoding", "rendering", "multimedia::images"]
license = "MIT"
version = "0.0.1"
authors = ["Stephen Weeks <tene@allalone.org>"]
edition = "2018"

[lib]
name = "hsluv_tiny"

[dependencies]
az = "*"

[dependencies.fixed]
version = "*"
features = ["az"]

[dependencies.heapless]
version = "*"
features = ["ufmt-impl"]

[dependencies.num-traits]
version = "*"
default-features = false
features = ["libm"]

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies.fixed]
version = "*"
features = ["az", "serde"]
